tests/NormalTests/paczka1/small_fuzzy/32768093.err
Error in line 2: S785 S785 83,8
Error in line 6: 3WDbSj S883 96,7
